# Nanodet-YoloV8-Pose-MeterReader

./: CMakeLists.txt  Dockerfile  README.md  base.Dockerfile
.github/workflows/: docker-publish.yml
include/: base64.h
src/: main.cpp  web_api.cpp  yolov8_pose.cpp
web-ui/: package-lock.json  package.json
web-ui/src/: App.css  App.js  index.js
